Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Werewolf 1.04: Added village drunks and fixed other issues.
    * Werewolf: Fixed various annoyances. Also raised chance of gun hitting.
    * Werewolf: Fixed a nasty lynch nick exploit.
    * Fixed an issue in HELP.
    * Added a Ping module.
    * Moved Werewolf back to stable.

3.0 Alpha 10
===============================================================================
    * Werewolf moved to unstable/ for exclusion from alpha10.
    * Werewolf: Fixed a bug causing double lynches occasionally.
    * Werewolf: One bug fix and multiple bullets.
    * Werewolf: Fixed timeout bug.
    * Werewolf: Fixed various warnings.
    * Werewolf: Handful of bugs fixed, timeouts rewritten, wolf assignment
      rewritten. (see ROLES:Werewolf)
    * Werewolf: Fixed an annoyance in VOTES.
    * Werewolf: Fixed another round of bugs.
    * Werewolf: Fixed a grammatical error. Thanks TAD!
    * Werewolf: Fixed a bug that occasionally caused a person to get wolf
      twice in the same game.
    * Werewolf: Fixed a typo that broke the gun on occasion.
    * Fixed a minor retract bug in Werewolf.
    * Fixed two major bugs in Werewolf that messed up game play.
    * Fixed several bugs and changed around JOIN/START/BEGIN in Werewolf.
    * Fixed parsing of host masks with / in them. (if it was broken)
    * Werewolf: Fixed a leave before game begin bug.
    * Aliases now work in PM's to the bot too.
    * Added an epic, Werewolf module.
    * Made slog() saner.
    * Syntax for mod_init() changed. Package name is no longer required.
    * Added German translation to Greet help hash. - nridley
    * Added German translation to FML help hash. - nridley
    * Added German translation to Eval help hash. - nridley
    * Added German translation to EightBall help hash. - nridley